--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         />
         <img
           class="banner-img"
-          src="./assets/images/slideshow/slide1.jpg"
+          src="/assets/images/slideshow/slide1.jpg"
           alt="Banner Print-it"
         />
         <p>Impressions tous formats <span>en boutique et en ligne</span></p>
-        <div class="dots"></div>
+        <div class="dots"><span></span></div>
         <img
           class="arrow arrow_right"
           id="arr"
