refactor function , clean code camelcase var

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div id="banner">
         <img
           class="arrow arrow_left"
-          id="arl"
+          id="arrowLeft"
           src="/assets/images/arrow_left.png"
           alt="fleche a gauche "
         />
@@ -40,7 +40,7 @@
         <div class="dots"><span></span></div>
         <img
           class="arrow arrow_right"
-          id="arr"
+          id="arrowRight"
           src="/assets/images/arrow_right.png"
           alt="fleche a droite"
         />
