--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           alt="Banner Print-it"
         />
         <p>Impressions tous formats <span>en boutique et en ligne</span></p>
-        <div class="dots"><span></span></div>
+        <div class="dots"></div>
         <img
           class="arrow arrow_right"
           id="arrowRight"
