--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <img
           class="arrow arrow_left"
           id="arrowLeft"
-          src="/assets/images/arrow_left.png"
+          src="./assets/images/arrow_left.png"
           alt="fleche a gauche "
         />
         <img
           class="banner-img"
-          src="/assets/images/slideshow/slide1.jpg"
+          src="./assets/images/slideshow/slide1.jpg"
           alt="Banner Print-it"
         />
         <p>Impressions tous formats <span>en boutique et en ligne</span></p>
@@ -41,7 +41,7 @@
         <img
           class="arrow arrow_right"
           id="arrowRight"
-          src="/assets/images/arrow_right.png"
+          src="./assets/images/arrow_right.png"
           alt="fleche a droite"
         />
       </div>
